// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`check card generation 2 of clubs 1`] = `
Array [
  "┌──────────────┐",
  "│ 2♣           │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│            2♣│",
  "└──────────────┘",
]
`;

exports[`check card generation 10 of hearts 1`] = `
Array [
  "┌──────────────┐",
  "│10♥           │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│           10♥│",
  "└──────────────┘",
]
`;

exports[`check card generation Ace of diamonds 1`] = `
Array [
  "┌──────────────┐",
  "│ A♦           │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│            A♦│",
  "└──────────────┘",
]
`;

exports[`check card generation King of spades 1`] = `
Array [
  "┌──────────────┐",
  "│ K♠           │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│              │",
  "│            K♠│",
  "└──────────────┘",
]
`;
